# name: test_snapshot[Samario_Making_A_Mistake_-_One_Uncued_Tresillo2.rdzip]
  dict({
    'artist': 'Samario (Making A Mistake)',
    'artist_tokens': list([
      'Samario',
    ]),
    'authors': list([
      'Samario (Making A Mistake)',
    ]),
    'description': '''
      One Uncued Tresillo
      (song edited from [...]Machinegun Psystyle[...], by Camellia)
    ''',
    'description_ct': list([
      dict({
        'color': 'default',
        'len': 81,
      }),
    ]),
    'difficulty': 0,
    'has_classics': False,
    'has_freetimes': True,
    'has_freezeshots': False,
    'has_holds': False,
    'has_oneshots': False,
    'has_skipshots': False,
    'has_squareshots': False,
    'has_window_dance': False,
    'hue': 0,
    'id': 'one-uncu-i64TVVfB93P',
    'last_updated': datetime.datetime(2022, 6, 27, 21, 27, 12),
    'max_bpm': 70,
    'min_bpm': 40,
    'rdlevel_sha1': 'c467e396d29bd65f4a9c8e9abad64b05a4e39600',
    'seizure_warning': False,
    'sha1': '495bd9d1b759db53e600b3986df55bdf3a9c3653',
    'single_player': True,
    'song': 'One Uncued Tresillo',
    'song_ct': list([
      dict({
        'color': 'default',
        'len': 19,
      }),
    ]),
    'tags': list([
      'uncued tresillo',
      'samario please stop doing this',
    ]),
    'two_player': True,
  })
# ---
# name: test_snapshot[auburnsummer_-_Triplet_Testaaaaa1.rdzip]
  dict({
    'artist': 'auburnsummer',
    'artist_tokens': list([
      'auburnsummer',
    ]),
    'authors': list([
      'auburnsummer',
      'Xeno',
    ]),
    'description': 'A two-handed level. The eloquent blend between thirds and halves.',
    'description_ct': list([
      dict({
        'color': 'default',
        'len': 65,
      }),
    ]),
    'difficulty': 2,
    'has_classics': True,
    'has_freetimes': False,
    'has_freezeshots': False,
    'has_holds': False,
    'has_oneshots': True,
    'has_skipshots': False,
    'has_squareshots': True,
    'has_window_dance': False,
    'hue': 0.66,
    'id': 'triplet-LrxHzPMLamy',
    'last_updated': datetime.datetime(2022, 6, 27, 23, 25, 28),
    'max_bpm': 110,
    'min_bpm': 110,
    'rdlevel_sha1': '077671a2053d503850d2df220c10f7b901ae0963',
    'seizure_warning': False,
    'sha1': '460807d4b87deb9d94ab31369985ba96b5c95291',
    'single_player': True,
    'song': 'Triplet Test',
    'song_ct': list([
      dict({
        'color': 'default',
        'len': 12,
      }),
    ]),
    'tags': list([
      'Piano',
      '2p',
      'Two-handed',
    ]),
    'two_player': False,
  })
# ---
# name: test_snapshot[banas-QbMoyaG2nfK.rdzip]
  dict({
    'artist': 'placeboing',
    'artist_tokens': list([
      'placeboing',
    ]),
    'authors': list([
      "April's Only Fool",
    ]),
    'description': '''
      This level works under the assumption that you know how 8beat, 6beat, and Temporal Shift works.
      
      Hope you all have a wonderful April Fools Day!
      
      Hollaback Girl by Gwen Stefani x Donkey Kong Country 2 OST
      
      Banana CC by Pyre
      Banana Tile by Het
    ''',
    'description_ct': list([
      dict({
        'color': 'default',
        'len': 241,
      }),
    ]),
    'difficulty': 1,
    'has_classics': True,
    'has_freetimes': True,
    'has_freezeshots': False,
    'has_holds': False,
    'has_oneshots': True,
    'has_skipshots': True,
    'has_squareshots': False,
    'has_window_dance': False,
    'hue': 0.17,
    'id': 'banas-QbMoyaG2nfK',
    'last_updated': datetime.datetime(2022, 4, 9, 16, 40, 34),
    'max_bpm': 147,
    'min_bpm': 143.5,
    'rdlevel_sha1': 'cb674be3db4efc34f5cd77ba5138a7bf2fa7ee12',
    'seizure_warning': False,
    'sha1': '862f1ad3d2f6ae0580055700d79b8ae30c8771b2',
    'single_player': True,
    'song': 'BANAS',
    'song_ct': list([
      dict({
        'color': 'default',
        'len': 5,
      }),
    ]),
    'tags': list([
      'April Fools',
      'banana',
      'banas',
      'temporal shift',
      '8beat',
      '6beat',
    ]),
    'two_player': False,
  })
# ---
# name: test_snapshot[ennui-og-3VFE7LSmzSo.rdzip]
  dict({
    'artist': 'Pseuu',
    'artist_tokens': list([
      'Pseuu',
    ]),
    'authors': list([
      'Pseuu',
    ]),
    'description': '''
      uh... no comment. level made in about 3-4 working hours
      
      - tricky oneshot patterns
      - skipshots
      - holds
    ''',
    'description_ct': list([
      dict({
        'color': 'default',
        'len': 102,
      }),
    ]),
    'difficulty': 2,
    'has_classics': False,
    'has_freetimes': True,
    'has_freezeshots': False,
    'has_holds': True,
    'has_oneshots': True,
    'has_skipshots': True,
    'has_squareshots': False,
    'has_window_dance': True,
    'hue': 0.42,
    'id': 'ennui-og-3VFE7LSmzSo',
    'last_updated': datetime.datetime(2022, 1, 3, 23, 19, 26),
    'max_bpm': 126,
    'min_bpm': 126,
    'rdlevel_sha1': '34e9ce56866b66dec453d148f8c5d4c2bb7c7199',
    'seizure_warning': False,
    'sha1': '250da27a5bff4285dcbf22f13c9c287f7eaf30d7',
    'single_player': True,
    'song': 'ennui.ogg',
    'song_ct': list([
      dict({
        'color': 'default',
        'len': 9,
      }),
    ]),
    'tags': list([
      'chiptune',
      'short',
      '2p',
      'oneshots',
      'skipshots',
      'holds',
    ]),
    'two_player': True,
  })
# ---
# name: test_snapshot[jimmy-s-Ccby1RK3XJK.rdzip]
  dict({
    'artist': 'toonlink, Kenichi Nishikami, Takeru Kanazaki',
    'artist_tokens': list([
      'toonlink',
      'Kenichi Nishikami',
      'Takeru Kanazaki',
    ]),
    'authors': list([
      'Szprycha',
    ]),
    'description': 'A neat song from WarioWare DIY',
    'description_ct': list([
      dict({
        'color': 'default',
        'len': 30,
      }),
    ]),
    'difficulty': 1,
    'has_classics': True,
    'has_freetimes': False,
    'has_freezeshots': False,
    'has_holds': False,
    'has_oneshots': True,
    'has_skipshots': False,
    'has_squareshots': False,
    'has_window_dance': False,
    'hue': 0.19,
    'id': 'jimmy-s-Ccby1RK3XJK',
    'last_updated': datetime.datetime(2020, 6, 20, 23, 9, 28),
    'max_bpm': 125,
    'min_bpm': 125,
    'rdlevel_sha1': '0d2a9edca604c3f965347ef4b840bb43d94d3a76',
    'seizure_warning': False,
    'sha1': '5bb2d7298237d15b44fbb0a9ca963c00ecb58866',
    'single_player': True,
    'song': "Jimmy's Aesthetics",
    'song_ct': list([
      dict({
        'color': 'default',
        'len': 18,
      }),
    ]),
    'tags': list([
      'siivagunner',
      'nintendo',
      'warioware',
      'body rock',
    ]),
    'two_player': False,
  })
# ---
# name: test_snapshot[know-you-2zRJRCjPqJx.rdzip]
  dict({
    'artist': 'Andrew Huang',
    'artist_tokens': list([
      'Andrew Huang',
    ]),
    'authors': list([
      'lugi',
    ]),
    'description': 'Two lonely stars, wandering in the dark...',
    'description_ct': list([
      dict({
        'color': 'default',
        'len': 42,
      }),
    ]),
    'difficulty': 1,
    'has_classics': True,
    'has_freetimes': True,
    'has_freezeshots': False,
    'has_holds': False,
    'has_oneshots': True,
    'has_skipshots': False,
    'has_squareshots': False,
    'has_window_dance': False,
    'hue': 0.47,
    'id': 'know-you-2zRJRCjPqJx',
    'last_updated': datetime.datetime(2020, 6, 24, 15, 6, 48),
    'max_bpm': 78.5,
    'min_bpm': 78.5,
    'rdlevel_sha1': 'f67aa02893fdb5ccfad0e445486bd6595801ecdc',
    'seizure_warning': False,
    'sha1': 'f2ad0f76bbfedf96bec3451eb9ead014accb3047',
    'single_player': True,
    'song': 'Know You',
    'song_ct': list([
      dict({
        'color': 'default',
        'len': 8,
      }),
    ]),
    'tags': list([
      'slow',
      'pop',
    ]),
    'two_player': True,
  })
# ---
# name: test_snapshot[one-forg-NqVywpSrZs1.rdzip]
  dict({
    'artist': 'Quree',
    'artist_tokens': list([
      'Quree',
    ]),
    'authors': list([
      'BluPen',
    ]),
    'description': "Patient experiencing sudden heart strain again. Solve the patient's concerns.",
    'description_ct': list([
      dict({
        'color': 'default',
        'len': 77,
      }),
    ]),
    'difficulty': 2,
    'has_classics': True,
    'has_freetimes': False,
    'has_freezeshots': False,
    'has_holds': False,
    'has_oneshots': True,
    'has_skipshots': False,
    'has_squareshots': False,
    'has_window_dance': True,
    'hue': 0.1,
    'id': 'one-forg-NqVywpSrZs1',
    'last_updated': datetime.datetime(2022, 8, 19, 21, 53, 2),
    'max_bpm': 173,
    'min_bpm': 100,
    'rdlevel_sha1': 'f057987ce0007754050d661648112b78b2b6a535',
    'seizure_warning': False,
    'sha1': 'a75d03f274c9032a6f75fa32ac57005615c04b47',
    'single_player': True,
    'song': 'One Forgotten Night',
    'song_ct': list([
      dict({
        'color': 'default',
        'len': 19,
      }),
    ]),
    'tags': list([
      'quree',
      'window dance',
    ]),
    'two_player': True,
  })
# ---
# name: test_snapshot[one-uncu-eqSkB1ZX7Xz.rdzip]
  dict({
    'artist': 'Samario (Making A Mistake)',
    'artist_tokens': list([
      'Samario (Making A Mistake)',
    ]),
    'authors': list([
      'Samario (Making A Mistake)',
    ]),
    'description': '''
      One Uncued Tresillo
      (song edited from [...]Machinegun Psystyle[...], by Camellia)
    ''',
    'description_ct': list([
      dict({
        'color': 'default',
        'len': 81,
      }),
    ]),
    'difficulty': 0,
    'has_classics': False,
    'has_freetimes': True,
    'has_freezeshots': False,
    'has_holds': False,
    'has_oneshots': False,
    'has_skipshots': False,
    'has_squareshots': False,
    'has_window_dance': False,
    'hue': 0,
    'id': 'one-uncu-eqSkB1ZX7Xz',
    'last_updated': datetime.datetime(2021, 1, 2, 3, 52, 10),
    'max_bpm': 160,
    'min_bpm': 160,
    'rdlevel_sha1': '1d74eea124e8c1b0735a9dd79c655589a0b72ed5',
    'seizure_warning': False,
    'sha1': '1bf690214be382e78daa98a5c7e73b79a59cf610',
    'single_player': True,
    'song': 'One Uncued Tresillo',
    'song_ct': list([
      dict({
        'color': 'default',
        'len': 19,
      }),
    ]),
    'tags': list([
      'uncued tresillo',
      'samario please stop doing this',
    ]),
    'two_player': True,
  })
# ---
# name: test_snapshot[pull-EpgEYcGYPnU.rdzip]
  dict({
    'artist': 'Hot Freaks',
    'artist_tokens': list([
      'Hot Freaks',
    ]),
    'authors': list([
      'Labyrinth',
    ]),
    'description': "It's not something easy to admit.",
    'description_ct': list([
      dict({
        'color': 'default',
        'len': 33,
      }),
    ]),
    'difficulty': 1,
    'has_classics': True,
    'has_freetimes': True,
    'has_freezeshots': False,
    'has_holds': False,
    'has_oneshots': False,
    'has_skipshots': False,
    'has_squareshots': False,
    'has_window_dance': False,
    'hue': 0.88,
    'id': 'pull-EpgEYcGYPnU',
    'last_updated': datetime.datetime(2022, 6, 16, 0, 8, 26),
    'max_bpm': 89,
    'min_bpm': 88,
    'rdlevel_sha1': '188fc218f13dec8c67e0de931bd5a073e5d239bf',
    'seizure_warning': False,
    'sha1': 'bdbd0b30d6ea29f8a6d2e8602b8829508dcbfc02',
    'single_player': True,
    'song': 'Pull',
    'song_ct': list([
      dict({
        'color': 'default',
        'len': 4,
      }),
    ]),
    'tags': list([
      '1p',
      '2p',
      'gimmick',
    ]),
    'two_player': True,
  })
# ---
# name: test_snapshot[rgb-7krFijAGF4D.rdzip]
  dict({
    'artist': 'Green wisteria',
    'artist_tokens': list([
      'Green wisteria',
    ]),
    'authors': list([
      'Delta',
      'Xeno',
    ]),
    'description': '''
      (CW: Body Horror)
      A white lily bloomed, a black maw devoured.
    ''',
    'description_ct': list([
      dict({
        'color': 'default',
        'len': 61,
      }),
    ]),
    'difficulty': 2,
    'has_classics': True,
    'has_freetimes': True,
    'has_freezeshots': False,
    'has_holds': False,
    'has_oneshots': True,
    'has_skipshots': False,
    'has_squareshots': False,
    'has_window_dance': False,
    'hue': 0.66,
    'id': 'rgb-7krFijAGF4D',
    'last_updated': datetime.datetime(2022, 9, 23, 9, 27, 28),
    'max_bpm': 204,
    'min_bpm': 100,
    'rdlevel_sha1': '17a41d4c9b575d3202b8832a9d21c3b873d959e5',
    'seizure_warning': True,
    'sha1': '88f48cdbd6a63773fcf44a38f5ed1ece00f399be',
    'single_player': True,
    'song': 'RGB',
    'song_ct': list([
      dict({
        'color': 'default',
        'len': 3,
      }),
    ]),
    'tags': list([
      'compo19',
      'competition 19',
      'weird',
      'red green blue',
      'namine ritsu',
    ]),
    'two_player': False,
  })
# ---
# name: test_snapshot[sol-e-ma-dVMtiNt856v.rdzip]
  dict({
    'artist': 'Masssive New Krew',
    'artist_tokens': list([
      'Masssive New Krew',
    ]),
    'authors': list([
      'Lyco',
    ]),
    'description': 'A new patient seems to have come in- Nevermind forget i said that he is an emergency case get here quick!',
    'description_ct': list([
      dict({
        'color': 'default',
        'len': 105,
      }),
    ]),
    'difficulty': 3,
    'has_classics': True,
    'has_freetimes': False,
    'has_freezeshots': False,
    'has_holds': False,
    'has_oneshots': True,
    'has_skipshots': False,
    'has_squareshots': True,
    'has_window_dance': False,
    'hue': 0.92,
    'id': 'sol-e-ma-dVMtiNt856v',
    'last_updated': datetime.datetime(2021, 8, 21, 12, 15, 10),
    'max_bpm': 150,
    'min_bpm': 150,
    'rdlevel_sha1': 'e028099e06643a6ec8ff2e3385f6e9189d134dcf',
    'seizure_warning': False,
    'sha1': 'f909b918e876d72fe8c3d385ba03940f85b3b906',
    'single_player': True,
    'song': 'Sol e Mar',
    'song_ct': list([
      dict({
        'color': 'default',
        'len': 9,
      }),
    ]),
    'tags': list([
    ]),
    'two_player': False,
  })
# ---
# name: test_snapshot[swing-c2QGYcw8GLq.rdzip]
  dict({
    'artist': 'JustMe',
    'artist_tokens': list([
      'JustMe',
    ]),
    'authors': list([
      'Xeno',
    ]),
    'description': "Printin' twang.",
    'description_ct': list([
      dict({
        'color': 'default',
        'len': 15,
      }),
    ]),
    'difficulty': 1,
    'has_classics': True,
    'has_freetimes': True,
    'has_freezeshots': False,
    'has_holds': False,
    'has_oneshots': True,
    'has_skipshots': False,
    'has_squareshots': False,
    'has_window_dance': False,
    'hue': 0.08,
    'id': 'swing-c2QGYcw8GLq',
    'last_updated': datetime.datetime(2020, 12, 1, 18, 30, 20),
    'max_bpm': 130,
    'min_bpm': 130,
    'rdlevel_sha1': 'cdbcaadea1a271696931e9badab00fc24c9acd51',
    'seizure_warning': False,
    'sha1': '933bbbbd9c1d79a8c3d2946e5748548a414488ea',
    'single_player': True,
    'song': 'Swing',
    'song_ct': list([
      dict({
        'color': 'default',
        'len': 5,
      }),
    ]),
    'tags': list([
      'Printing',
      'CMYK',
      'Swing',
      'Bounce',
      'syncopation',
      'gimmick',
      '1p',
      '2p',
      'XenOnly',
    ]),
    'two_player': True,
  })
# ---
# name: test_snapshot[yi-xiao-Hg3afme47nr.rdzip]
  dict({
    'artist': '遊助',
    'artist_tokens': list([
      '遊助',
    ]),
    'authors': list([
      '来因洛特',
    ]),
    'description': "这次的这个谱我真的花了很长时间，大概有......差不多50个小时吧。歌词因为是CC，只能全用平假名了，看起来麻烦也抱歉了...希望这次能取得比上次更好的结果吧。来来回回也看了很多次，感觉想不到有什么能加的了，就这样交了吧。也希望你也能像歌词一样开开心心的，活着本身没有意义，但就是为了知道是为了什么我们才会活着呀。(I don't know how to translate)",
    'description_ct': list([
      dict({
        'color': 'default',
        'len': 189,
      }),
    ]),
    'difficulty': 0,
    'has_classics': True,
    'has_freetimes': True,
    'has_freezeshots': False,
    'has_holds': False,
    'has_oneshots': False,
    'has_skipshots': False,
    'has_squareshots': False,
    'has_window_dance': False,
    'hue': 0.17,
    'id': 'yi-xiao-Hg3afme47nr',
    'last_updated': datetime.datetime(2022, 8, 27, 11, 35, 12),
    'max_bpm': 138,
    'min_bpm': 138,
    'rdlevel_sha1': '1ea9de1156f77d09fb4746c5224d5cc7f82dc0dc',
    'seizure_warning': True,
    'sha1': '82dfb357c88904400fbf7eebc2ff2d1820ad9f8f',
    'single_player': True,
    'song': '一笑懸命',
    'song_ct': list([
      dict({
        'color': 'default',
        'len': 4,
      }),
    ]),
    'tags': list([
      'easy',
      'CNcompo 1',
      'relaxing',
      'lyrics',
    ]),
    'two_player': False,
  })
# ---
